--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
         <div id="page2" class="row h-100 justify-content-center align-items-center">
 
           <div class="display-6 container">
-            <p class="m-5 judul-main text-center display-3 fw-bold warna-utama">yg berbahagia HM Chusnul Yaqin dan Hj
-              Toetoek Hariyati
+            <p class="m-5 judul-main text-center display-3 fw-bold warna-utama">yg berbahagia <br>Mustofa Kamal Alfaruqi dan Nur Rizki Aini<br>
               sekeluarga
               <br><br>
               Jl. Teuku Umar/Adiyaksa I no 7 Tuban
